v1.0 (XXXX-XX-XX)
==================

CURRENT DEVELOPMENT VERSION

- Added MWPotential2014: a Milky-Way-like potential fit to a bunch of relevant data on the Milky Way; supersedes MWPotential, which is still included.

- Add C implementation of PowerSphericalPotentialwCutoff;

- Moved MovingObjectPotential, BurkertPotential, and interpRZPotential to top level; better implementation of interpRZPotential;

- Sped up many of the functions in galpy.util.bovy_coords by removing scipy.frompyfunc dependency.

- Allow Orbit initialization to specify a distance and velocity scale that is then used to output distances and velocities in physical coordinates.

- Changed default vo and ro to 220 km/s and 8 kpc, respectively;

- Better handling of vo,ro, and solarmotion in Orbit instances (Orbit initialization value is now used to generate RA, Dec, etc. outputs);

- Started on adding virial radius of NFW potential, allow initialization of NFW potential with concentration and mass;

- Added potential.mass to return the mass enclosed for individual potential instances; both spherical and axisymmetric potentials are covered.

- Added --no-openmp installation option to allow installation without OpenMP support (workaround for clang not supporting OpenMP);

- Added galpy.util.bovy_conversion.dens_in_gevcc, galpy.util.bovy_conversion.force_in_10m13kms2, galpy.util.bovy_conversion.dens_in_criticaldens, galpy.util.bovy_conversion.dens_in_meanmatterdens.


v0.1 (2014-01-09)
==================

- Initial release