@@ -76,7 +76,7 @@ class OrbitTop:
         self._voSet= False
         return None
 
-    def integrate(self,t,pot,method='leapfrog_c'):
+    def integrate(self,t,pot,method='symplec4_c'):
         """
         NAME:
            integrate
